WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95180
[Gtk] Incorrect/unexpected characters in the text of certain accessibles
https://bugs.webkit.org/show_bug.cgi?id=95180
Summary
[Gtk] Incorrect/unexpected characters in the text of certain accessibles
Joanmarie Diggs
Reported
2012-08-28 01:57:46 PDT
Created
attachment 160929
[details]
test case Steps to reproduce: 1. Load the test case in gtk launcher 2. Launch the test script in a terminal window 3. Give focus back to gtk launcher Expected results: No bogus characters Actual results: Bogus characters panel text: -  panel text: - iframe panel text: - text area panel text: - And in a div: panel text: - button panel text: - What about a heading? panel text: - button panel text: -  So far I can only reproduce it with ATK_ROLE_PANEL (GroupRole) objects. Embedded/replaced object characters elsewhere are fine.
Attachments
test case
(375 bytes, text/plain)
2012-08-28 01:57 PDT
,
Joanmarie Diggs
no flags
Details
test script
(795 bytes, text/plain)
2012-08-28 01:58 PDT
,
Joanmarie Diggs
no flags
Details
Proposed patch, includes updated unit test and 2 new layout tests
(17.86 KB, patch)
2012-08-30 18:51 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joanmarie Diggs
Comment 1
2012-08-28 01:58:47 PDT
Created
attachment 160930
[details]
test script
Alejandro Piñeiro
Comment 2
2012-08-28 02:23:10 PDT
(In reply to
comment #1
)
> Created an attachment (id=160930) [details] > test script
FWIW, I have just tested this script, and I get the same outcome that Joanmarie at
comment 0
.
Joanmarie Diggs
Comment 3
2012-08-30 18:51:54 PDT
Created
attachment 161602
[details]
Proposed patch, includes updated unit test and 2 new layout tests
Joanmarie Diggs
Comment 4
2012-08-30 18:54:43 PDT
Chris this one is a one-line fix. The rest is test related. If you have a chance to review it should be easy and it will be appreciated. :) Thanks!
chris fleizach
Comment 5
2012-08-30 19:11:40 PDT
Comment on
attachment 161602
[details]
Proposed patch, includes updated unit test and 2 new layout tests Looks ok. I am assuming that I can't see the embedded objects directly in the HTML source? is that correct?
Joanmarie Diggs
Comment 6
2012-08-30 19:40:24 PDT
Comment on
attachment 161602
[details]
Proposed patch, includes updated unit test and 2 new layout tests (In reply to
comment #5
)
> (From update of
attachment 161602
[details]
) > Looks ok.
Thanks! :)
> I am assuming that I can't see the embedded objects directly in the HTML source? is that correct?
Exactly. They represent things like images and controls and other non-textual objects.
WebKit Review Bot
Comment 7
2012-09-01 01:27:09 PDT
Comment on
attachment 161602
[details]
Proposed patch, includes updated unit test and 2 new layout tests Rejecting
attachment 161602
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13713533
Zan Dobersek
Comment 8
2012-09-01 01:43:49 PDT
(In reply to
comment #7
)
> (From update of
attachment 161602
[details]
) > Rejecting
attachment 161602
[details]
from commit-queue. > > Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 > > ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). > > Full output:
http://queues.webkit.org/results/13713533
Source/WebCore/ChangeLog was missing the 'Reviewed by' line. Fixed and commited in
r127367
:
http://trac.webkit.org/changeset/127367
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug