Tools/DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp
@@ -34,6 +34,24 @@
 #include <wtf/Assertions.h>
 #include <wtf/gobject/GOwnPtr.h>
 #include <wtf/gobject/GRefPtr.h>
+#include <wtf/text/WTFString.h>
+#include <wtf/unicode/CharacterNames.h>
+
+static inline gchar* replaceCharactersForResults(gchar* str)
+{
+    String uString = String::fromUTF8(str);
+
+    // The object replacement character is passed along to ATs so we need to be
+    // able to test for their presence and do so without causing test failures.
+    uString.replace(objectReplacementCharacter, "<obj>");
+
+    // The presence of newline characters in accessible text of a single object
+    // is appropriate, but it makes test results (especially the accessible tree)
+    // harder to read.
+    uString.replace("\n", "<\\n>");
+
+    return g_strdup(uString.utf8().data());
+}
 
 AccessibilityUIElement::AccessibilityUIElement(PlatformUIElement element)
     : m_element(element)
@@ -274,15 +292,8 @@ JSStringRef AccessibilityUIElement::stringValue()
     if (!m_element || !ATK_IS_TEXT(m_element))
         return JSStringCreateWithCharacters(0, 0);
 
-    // FIXME: implement properly for ATK_ROLE_PANEL. Prior to doing so, we need
-    // to fix bug 95180 as well as determine which panels we wish to keep in the
-    // accessible hierarchy. See, for instance, bug 72811.
-    AtkRole role = atk_object_get_role(ATK_OBJECT(m_element));
-    if (role == ATK_ROLE_PANEL)
-        return JSStringCreateWithCharacters(0, 0);
-
-    gchar* text =text = atk_text_get_text(ATK_TEXT(m_element), 0, -1);
-    GOwnPtr<gchar> axValue(g_strdup_printf("AXValue: %s", text));
+    gchar* text = atk_text_get_text(ATK_TEXT(m_element), 0, -1);
+    GOwnPtr<gchar> axValue(g_strdup_printf("AXValue: %s", replaceCharactersForResults(text)));
     g_free(text);
 
     return JSStringCreateWithUTF8CString(axValue.get());
